	it's not cached (prims.cfg in configuration directory) or on user demand. Primitives can be categorised
	with the use of a regex-based configuration file, with a valid default which should cater to most users.
- Added an export to file action, moved it + insert from to File menu
- Added the message log - instead of being a separate text widget as originally planned, messages are
	drawn into the viewport. Messages expire after 5 seconds.
- Parts are now zoomed to fit properly, making the initial view of the part clearer.
- Replace coords: allow replacing all coords regardless of original value, plus relative moving (offset)
- Objects can now be edited by double-clicking on them.
- When drawing, drawn vertices now display coordinate labels.
- Changed default keys for Y-axis moving from PgUp/PgDown to Home and End ala MLCAD.
- [Linux] External programs can now be launched with Wine.
- Improved external program fault handling: don't try to replace/append the output in case of failure, catch non-zero exit codes.
- Added a progress box for file loading to respond to desktops while loading files. With large files
	the no-response policy could be a bad thing.
- Color selector is now twice as wide for easier color selection.
- Fixed: Recent files should behave coherently now.
- Fixed: text editing did not trigger checks while setting LDraw path, removed the Configure
	button from the LDraw path config dialog, it's no longer needed.
- Fixed: Coordinates weren't drawn properly on a bright background (was always drawn in bright colors..).
- Renamed "Set Contents" into "Edit LDraw Code", should be clearer
- Changed the green color to more "greener" green, rather than yellowish lime.
- The dialog box for setting a comment's text is now a lot wider
- Calculated coordinates are now rounded down (to prevent stuff like Z:160.000001)
- New part dialog: changed "Name:" to "Title", widened a tad.